# FinInsight

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat
docs/: CHARTS.md  DATAHUB.md  DESIGN.md  DSL.md  NOTES.md  PANELS.md  STORAGE.md
src/: CMakeLists.txt  main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/charts/: IndicatorEngine.cpp  IndicatorEngine.h  KLineChart.cpp  KLineChart.h
src/core/: AppConfig.cpp  AppConfig.h
src/datahub/: Aggregator.cpp  Aggregator.h  DataHub.cpp  DataHub.h  EastMoneyProducer.cpp  EastMoneyProducer.h  QuoteData.h  YahooProducer.cpp  YahooProducer.h
src/dsl/: Evaluator.cpp  Evaluator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h
src/network/: HttpClient.cpp  HttpClient.h
src/panels/: DetailPanel.cpp  DetailPanel.h  PortfolioPanel.cpp  PortfolioPanel.h  StockListPanel.cpp  StockListPanel.h  StockSearchBar.cpp  StockSearchBar.h
src/storage/: BaseRepository.h  Database.cpp  Database.h  Migration.h  StockRepository.cpp  StockRepository.h
src/storage/migrations/: V001_Initial.h
